# ALTRunRT

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  ConfigPanel.tsx  ShortCutManager.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: executor.rs  lib.rs  main.rs  models.rs  search.rs  storage.rs
